--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "roboledger-app",
   "version": "0.2.2",
   "private": true,
+  "license": "Apache-2.0",
   "engines": {
     "node": ">=22.0.0"
   },
