--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,5 +1,10 @@
 name: Deploy Staging
 
+permissions:
+  contents: read
+  deployments: write
+  id-token: write
+
 concurrency:
   group: roboledger-app-deploy-staging
   cancel-in-progress: false
@@ -8,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  check-runner-availability:
+  runner:
     if: vars.ENVIRONMENT_STAGING_ENABLED == 'true'
     runs-on: ubuntu-latest
     outputs:
@@ -19,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          repository: ${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}
+          repository: ${{ github.repository }}
           ref: ${{ github.ref }}
           token: ${{ secrets.ACTIONS_TOKEN }}
 
@@ -27,22 +32,22 @@ jobs:
         id: check
         uses: ./.github/actions/runner-availability
         with:
-          repository_name: ${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}
-          runner_labels: 'self-hosted,Linux,X64,AL2023,ci'
+          runner_labels: ${{ vars.RUNNER_LABELS || 'github-hosted' }}
+          runner_scope: ${{ vars.RUNNER_SCOPE || 'both' }}
           timeout_minutes: '2'
           github_token: ${{ secrets.ACTIONS_TOKEN }}
 
   test:
-    needs: [check-runner-availability]
+    needs: [runner]
     uses: ./.github/workflows/test.yml
     with:
-      runner_config: ${{ needs.check-runner-availability.outputs.runner_config }}
+      runner_config: ${{ needs.runner.outputs.runner_config }}
     secrets:
       ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
 
   create-deployment:
-    needs: [check-runner-availability, test]
-    runs-on: ${{ fromJSON(needs.check-runner-availability.outputs.runner_config) }}
+    needs: [runner, test]
+    runs-on: ${{ fromJSON(needs.runner.outputs.runner_config) }}
     outputs:
       deployment_id: ${{ steps.deployment.outputs.deployment_id }}
     steps:
@@ -62,7 +67,7 @@ jobs:
           description: 'Staging Deployment In Progress'
 
   deploy-s3:
-    needs: [test, create-deployment]
+    needs: [runner, test, create-deployment]
     uses: ./.github/workflows/deploy-s3.yml
     with:
       stack_name: RoboLedgerAppS3Staging
@@ -76,7 +81,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   build:
-    needs: [test, deploy-s3]
+    needs: [runner, test, deploy-s3]
     uses: ./.github/workflows/build.yml
     with:
       environment: ${{ vars.ENVIRONMENT_STAGING || 'staging' }}
@@ -97,11 +102,11 @@ jobs:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   deploy-app:
-    needs: [check-runner-availability, create-deployment, build]
+    needs: [runner, create-deployment, build]
     uses: ./.github/workflows/deploy-app.yml
     with:
       # GHA Runner Configuration
-      runner_config: ${{ needs.check-runner-availability.outputs.runner_config }}
+      runner_config: ${{ needs.runner.outputs.runner_config }}
       # Environment & AWS Configuration
       environment: ${{ vars.ENVIRONMENT_STAGING || 'staging' }}
       aws_account_id: ${{ vars.AWS_ACCOUNT_ID }}
@@ -134,8 +139,8 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   deployment-successful:
-    needs: [check-runner-availability, create-deployment, build, deploy-app]
-    runs-on: ${{ fromJSON(needs.check-runner-availability.outputs.runner_config) }}
+    needs: [runner, create-deployment, build, deploy-app]
+    runs-on: ${{ fromJSON(needs.runner.outputs.runner_config) }}
     outputs:
       deployment_id: ${{ needs.create-deployment.outputs.deployment_id }}
     steps:
@@ -148,14 +153,14 @@ jobs:
           description: 'Staging Deployment Succeeded'
 
   handle-deployment-failure:
-    needs: [check-runner-availability, create-deployment, build, deploy-app]
+    needs: [runner, create-deployment, build, deploy-app]
     if: always() && contains(needs.*.result, 'failure')
-    runs-on: ${{ fromJSON(needs.check-runner-availability.outputs.runner_config) }}
+    runs-on: ${{ fromJSON(needs.runner.outputs.runner_config) }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
-          repository: ${{ vars.REPOSITORY_NAME || 'RoboFinSystems/roboledger-app' }}
+          repository: ${{ github.repository }}
           ref: ${{ github.ref }}
           token: ${{ secrets.ACTIONS_TOKEN }}
 
