Update README and GitHub Actions workflows for improved deployment options and runner configurations. Modify README to clarify self-hosted deployment as "Fork & Deploy" and adjust workflows to use 'github-hosted' runners with enhanced scope support, removing deprecated timeout_minutes input for cleaner configuration.

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -8,7 +8,7 @@ on:
         description: 'GitHub Actions runner configuration (JSON array)'
         required: false
         type: string
-        default: '["self-hosted", "Linux", "X64", "AL2023", "ci"]'
+        default: '["ubuntu-latest"]'
 
       # Environment & AWS Configuration
       environment:
