Remove deprecated GitHub Actions workflows for main branch and pull request testing. These workflows have been eliminated to streamline CI/CD processes and improve overall configuration management.

--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -1,8 +1,11 @@
-name: Test Pull Request
+name: Test CI
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - main
 
 jobs:
   runner:
