--- a/.github/ISSUE_TEMPLATE/spec.yml
+++ b/.github/ISSUE_TEMPLATE/spec.yml
@@ -26,7 +26,7 @@ body:
   - type: textarea
     id: current-state
     attributes:
-      label: "Problem Statement: Current State"
+      label: 'Problem Statement: Current State'
       placeholder: What exists today?
     validations:
       required: true
@@ -34,7 +34,7 @@ body:
   - type: textarea
     id: desired-state
     attributes:
-      label: "Problem Statement: Desired State"
+      label: 'Problem Statement: Desired State'
       placeholder: What should exist?
     validations:
       required: true
@@ -42,13 +42,13 @@ body:
   - type: textarea
     id: why-now
     attributes:
-      label: "Problem Statement: Why Now?"
+      label: 'Problem Statement: Why Now?'
       placeholder: Why is this the right time?
 
   - type: textarea
     id: approach
     attributes:
-      label: "Proposed Solution: Approach"
+      label: 'Proposed Solution: Approach'
       placeholder: High-level description of the solution
     validations:
       required: true
