feat: Add bootstrap script and update workflows for OIDC authentication
- Introduced a new bootstrap script to set up OIDC authentication for the application.
- Updated GitHub Actions workflows to remove AWS access key requirements, replacing them with role-based authentication.
- Added new commands in package.json for bootstrap and setup tasks.
- Enhanced VSCode tasks to include bootstrap and GitHub Actions setup commands.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -56,6 +56,18 @@
       "problemMatcher": []
     },
     {
+      "label": "Bootstrap OIDC",
+      "type": "shell",
+      "command": "npm run setup:bootstrap",
+      "problemMatcher": []
+    },
+    {
+      "label": "Setup GitHub Actions",
+      "type": "shell",
+      "command": "npm run setup:gha",
+      "problemMatcher": []
+    },
+    {
       "label": "Create Feature",
       "type": "shell",
       "command": "npm run feature:create ${input:branchType} ${input:branchName} ${input:baseBranch}",
