--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,10 +51,6 @@ on:
     secrets:
       ACTIONS_TOKEN:
         required: true
-      AWS_ACCESS_KEY_ID:
-        required: true
-      AWS_SECRET_ACCESS_KEY:
-        required: true
       DOCKERHUB_USERNAME:
         required: false
       DOCKERHUB_TOKEN:
@@ -64,6 +60,9 @@ jobs:
   action:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    permissions:
+      id-token: write
+      contents: read
     outputs:
       image: ${{ steps.build-and-push.outputs.image }}
       ecr_repository_url: ${{ steps.build-and-push.outputs.ecr_repository_url }}
@@ -102,8 +101,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
           aws-region: ${{ inputs.region }}
 
       - name: Login to Amazon ECR
