--- a/cloudformation/s3.yaml
+++ b/cloudformation/s3.yaml
@@ -1,4 +1,4 @@
-Description: RoboLedger App S3 Buckets - Static Assets and WWW Redirect
+Description: RoboLedger App S3 Buckets - Static Assets
 
 Parameters:
   Environment:
@@ -25,12 +25,6 @@ Parameters:
     Default: App
     Description: Tag value for Component identification
 
-Conditions:
-  # Check if we're in production environment for www redirect
-  IsProduction: !Equals
-    - !Ref Environment
-    - prod
-
 Resources:
   # S3 Bucket for Static Assets
   StaticAssetsBucket:
@@ -44,33 +38,6 @@ Resources:
         BlockPublicPolicy: true
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
-      Tags:
-        - Key: Environment
-          Value: !Ref Environment
-        - Key: Service
-          Value: !Ref ServiceTag
-        - Key: Component
-          Value: !Ref ComponentTag
-        - Key: CreatedBy
-          Value: CloudFormation
-
-  # S3 Bucket for www redirect
-  WwwRedirectBucket:
-    Type: AWS::S3::Bucket
-    Condition: IsProduction
-    DeletionPolicy: Delete
-    UpdateReplacePolicy: Retain
-    Properties:
-      BucketName: !Sub roboledger-app-${Environment}-www-redirect
-      WebsiteConfiguration:
-        RedirectAllRequestsTo:
-          HostName: !Ref DomainName
-          Protocol: https
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: false
-        BlockPublicPolicy: false
-        IgnorePublicAcls: false
-        RestrictPublicBuckets: false
       Tags:
         - Key: Environment
           Value: !Ref Environment
@@ -99,17 +66,3 @@ Outputs:
     Value: !GetAtt StaticAssetsBucket.RegionalDomainName
     Export:
       Name: !Sub ${AWS::StackName}-StaticAssetsBucketDomainName
-
-  WwwRedirectBucketName:
-    Condition: IsProduction
-    Description: S3 Bucket for www redirect
-    Value: !Ref WwwRedirectBucket
-    Export:
-      Name: !Sub ${AWS::StackName}-WwwRedirectBucketName
-
-  WwwRedirectBucketWebsiteURL:
-    Condition: IsProduction
-    Description: S3 Bucket Website URL for www redirect
-    Value: !Sub ${WwwRedirectBucket}.s3-website-${AWS::Region}.amazonaws.com
-    Export:
-      Name: !Sub ${AWS::StackName}-WwwRedirectBucketWebsiteURL
