--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -69,6 +69,7 @@ jobs:
     needs: [runner, test, create-deployment]
     uses: ./.github/workflows/deploy-s3.yml
     with:
+      runner_config: ${{ needs.runner.outputs.runner_config }}
       stack_name: RoboLedgerAppS3Staging
       environment: ${{ vars.ENVIRONMENT_STAGING || 'staging' }}
       aws_account_id: ${{ vars.AWS_ACCOUNT_ID }}
@@ -81,6 +82,7 @@ jobs:
     needs: [runner, test, deploy-s3]
     uses: ./.github/workflows/build.yml
     with:
+      runner_config: ${{ needs.runner.outputs.runner_config }}
       environment: ${{ vars.ENVIRONMENT_STAGING || 'staging' }}
       region: ${{ vars.AWS_REGION || 'us-east-1' }}
       robosystems_api_url: ${{ vars.ROBOSYSTEMS_API_URL_STAGING || 'https://staging.api.robosystems.ai' }}
