chore: Update VSCode tasks for AWS SSO and STS identity
- Replaced the "Bootstrap OIDC" task with "AWS SSO Login" for improved authentication workflow.
- Added a new task for "AWS STS Identity" to retrieve caller identity, enhancing AWS CLI integration in the development environment.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -56,7 +56,21 @@
       "problemMatcher": []
     },
     {
-      "label": "Bootstrap OIDC",
+      "label": "AWS SSO Login",
+      "type": "shell",
+      "command": "aws",
+      "args": ["sso", "login"],
+      "problemMatcher": []
+    },
+    {
+      "label": "AWS STS Identity",
+      "type": "shell",
+      "command": "aws",
+      "args": ["sts", "get-caller-identity"],
+      "problemMatcher": []
+    },
+    {
+      "label": "RoboLedger App Bootstrap OIDC",
       "type": "shell",
       "command": "npm run setup:bootstrap",
       "problemMatcher": []
