chore: Update package-lock.json and VSCode tasks for enhanced feature creation
- Updated AWS SDK and Smithy dependencies to version 3.967.0 and 4.10.5 respectively for improved functionality.
- Added a new input option for updating dependencies during feature branch creation in VSCode tasks.
- Modified the create-feature script to include an option for updating dependencies after branch creation.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -84,7 +84,7 @@
     {
       "label": "Create Feature",
       "type": "shell",
-      "command": "npm run feature:create ${input:branchType} ${input:branchName} ${input:baseBranch}",
+      "command": "npm run feature:create ${input:branchType} ${input:branchName} ${input:baseBranch} ${input:updateDependencies}",
       "problemMatcher": []
     },
     {
@@ -121,6 +121,13 @@
       "label": "Setup GitHub Actions",
       "type": "shell",
       "command": "npm run setup:gha",
+      "problemMatcher": []
+    },
+    {
+      "label": "Claude Code",
+      "type": "shell",
+      "command": "claude",
+      "args": [],
       "problemMatcher": []
     }
   ],
@@ -164,6 +171,13 @@
       "type": "promptString",
       "description": "Enter base branch (default: main):",
       "default": "main"
+    },
+    {
+      "id": "updateDependencies",
+      "type": "pickString",
+      "description": "Update dependencies after creating branch:",
+      "default": "yes",
+      "options": ["yes", "no"]
     },
     {
       "id": "targetBranch",
