--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -17,16 +17,16 @@ on:
     outputs:
       tag_name:
         description: 'The created tag name (e.g., v1.2.3)'
-        value: ${{ jobs.action.outputs.tag_name }}
+        value: ${{ jobs.tag.outputs.tag_name }}
       version:
         description: 'The version number (e.g., 1.2.3)'
-        value: ${{ jobs.action.outputs.version }}
+        value: ${{ jobs.tag.outputs.version }}
       release_url:
         description: 'The GitHub release URL'
-        value: ${{ jobs.action.outputs.release_url }}
+        value: ${{ jobs.tag.outputs.release_url }}
 
 jobs:
-  action:
+  tag:
     runs-on: ubuntu-latest # Use GitHub-hosted runners for memory-intensive git/Claude operations
     timeout-minutes: 15
     permissions:
