--- a/.github/branch-rules/release.json
+++ b/.github/branch-rules/release.json
@@ -1,6 +1,7 @@
 {
   "name": "Release Branches",
   "target": "branch",
+  "source_type": "Repository",
   "enforcement": "active",
   "conditions": {
     "ref_name": {
@@ -13,6 +14,9 @@
       "type": "deletion"
     },
     {
+      "type": "non_fast_forward"
+    },
+    {
       "type": "creation"
     },
     {
@@ -21,10 +25,12 @@
   ],
   "bypass_actors": [
     {
+      "actor_id": null,
       "actor_type": "OrganizationAdmin",
       "bypass_mode": "always"
     },
     {
+      "actor_id": 5,
       "actor_type": "RepositoryRole",
       "bypass_mode": "always"
     }
