--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -32,7 +32,7 @@ on:
         default: true
 
 jobs:
-  action:
+  create-pr:
     runs-on: ubuntu-latest # Use GitHub-hosted runners for memory-intensive git/Claude operations
     timeout-minutes: 10
     env:
