--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -40,20 +40,20 @@ on:
     outputs:
       static_assets_bucket_name:
         description: 'Name of the static assets S3 bucket'
-        value: ${{ jobs.action.outputs.static_assets_bucket_name }}
+        value: ${{ jobs.deploy.outputs.static_assets_bucket_name }}
       static_assets_bucket_arn:
         description: 'ARN of the static assets S3 bucket'
-        value: ${{ jobs.action.outputs.static_assets_bucket_arn }}
+        value: ${{ jobs.deploy.outputs.static_assets_bucket_arn }}
       static_assets_bucket_domain:
         description: 'Regional domain name of the static assets S3 bucket'
-        value: ${{ jobs.action.outputs.static_assets_bucket_domain }}
+        value: ${{ jobs.deploy.outputs.static_assets_bucket_domain }}
 
     secrets:
       ACTIONS_TOKEN:
         required: true
 
 jobs:
-  action:
+  deploy:
     runs-on: ${{ fromJSON(inputs.runner_config) }}
     timeout-minutes: 15
     permissions:
