--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -6,7 +6,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: roboledger-app-deploy-prod
+  group: roboledger-app-deploy
   cancel-in-progress: false
 
 on:
