--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   runner:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     outputs:
       runners_available: ${{ steps.check.outputs.runners_available }}
       runner_type: ${{ steps.check.outputs.runner_type }}
