--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
         required: true
 
 jobs:
-  action:
+  test:
     runs-on: ${{ fromJSON(inputs.runner_config) }}
     timeout-minutes: 10
     env:
