Update AWS SDK dependencies and enhance Fargate configuration in workflows
- Upgraded AWS SDK and Smithy dependencies to version 3.970.0 and 4.10.8 respectively for improved functionality.
- Added 'fargate_base' parameter to deployment workflows and CloudFormation template to ensure minimum task availability during Spot shortages.
- Updated related workflow files to incorporate the new 'fargate_base' parameter for better resource management.

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -84,6 +84,11 @@ on:
         required: false
         type: string
         default: '80'
+      fargate_base:
+        description: 'Minimum tasks guaranteed on FARGATE (On-Demand). Set to 1+ for guaranteed availability during Spot shortages.'
+        required: false
+        type: string
+        default: '0'
 
       # Auto-scaling Configuration
       capacity_min:
@@ -280,6 +285,7 @@ jobs:
                 ParameterKey=ScaleDownMemoryThreshold,ParameterValue=${{ inputs.scale_down_memory_threshold }} \
                 ParameterKey=FargateSpotWeight,ParameterValue=${{ inputs.fargate_spot_weight }} \
                 ParameterKey=FargateWeight,ParameterValue=${{ inputs.fargate_weight }} \
+                ParameterKey=FargateBase,ParameterValue=${{ inputs.fargate_base }} \
                 ParameterKey=NotificationEmail,ParameterValue=${{ inputs.notification_email }}"
 
           # Add domain parameters only for public mode
