chore: update GitHub workflow to disable caching for Node.js dependencies
- Modified the test workflow to set 'enable-cache' to false for the uv setup, as there are no Python dependencies to cache in this Node.js application.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,8 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: false  # No Python deps to cache in this Node.js app
 
       - name: Install Dependencies
         timeout-minutes: 3
