chore: update workflows and package.json for enhanced testing and formatting
- Added a new 'cf-lint' script to package.json for CloudFormation linting.
- Updated the 'test:all' script to include 'cf-lint' for comprehensive testing.
- Standardized comments in GitHub workflows by removing extra spaces for consistency.
- Adjusted CloudFormation template parameters to use single quotes for better YAML compatibility.

--- a/cloudformation/s3.yaml
+++ b/cloudformation/s3.yaml
@@ -13,7 +13,7 @@ Parameters:
 
   Namespace:
     Type: String
-    Default: ""
+    Default: ''
     Description: |
       S3 bucket namespace (typically AWS account ID) for globally unique bucket names.
       When provided, creates buckets like: roboledger-app-{namespace}-{env}-static-assets
@@ -30,7 +30,7 @@ Parameters:
     Description: Tag value for Component identification
 
 Conditions:
-  HasNamespace: !Not [!Equals [!Ref Namespace, ""]]
+  HasNamespace: !Not [!Equals [!Ref Namespace, '']]
 
 Resources:
   # S3 Bucket for Static Assets
