--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint:fix": "eslint . --fix",
     "typecheck": "tsc --noEmit",
     "test": "vitest run --silent",
-    "test:all": "npm run test && npm run format && npm run lint:fix && npm run typecheck",
+    "test:all": "npm run test && npm run format && npm run lint:fix && npm run typecheck && npm run cf-lint",
+    "cf-lint": "uvx cfn-lint",
     "test:watch": "vitest watch --silent",
     "test:coverage": "vitest run --coverage --silent",
     "core:pull": "./bin/sync-subtree pull",
