--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
-          mask-password: "true"
+          mask-password: 'true'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -266,7 +266,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-      security-events: write  # Required for SARIF upload
+      security-events: write # Required for SARIF upload
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -277,7 +277,7 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
         with:
-          mask-password: "true"
+          mask-password: 'true'
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
