--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -121,19 +121,13 @@ jobs:
       # Container & Application Configuration
       ecr_repository: ${{ vars.ECR_REPOSITORY || 'roboledger-app' }}
       ecr_image_tag: latest
-      # ECS & Compute Configuration
-      cpu: ${{ vars.CPU_PROD || '256' }}
-      memory: ${{ vars.MEMORY_PROD || '512' }}
-      fargate_weight: ${{ vars.FARGATE_WEIGHT_PROD || '20' }}
-      fargate_spot_weight: ${{ vars.FARGATE_SPOT_WEIGHT_PROD || '80' }}
-      fargate_base: ${{ vars.FARGATE_BASE_PROD || '0' }}
+      # App Runner Compute Configuration
+      cpu: ${{ vars.CPU_PROD || '0.25 vCPU' }}
+      memory: ${{ vars.MEMORY_PROD || '0.5 GB' }}
       # Auto-scaling Configuration
       capacity_min: ${{ vars.CAPACITY_MIN_PROD || '1' }}
       capacity_max: ${{ vars.CAPACITY_MAX_PROD || '10' }}
-      scale_up_cpu_threshold: ${{ vars.SCALE_UP_CPU_THRESHOLD_PROD || '70' }}
-      scale_down_cpu_threshold: ${{ vars.SCALE_DOWN_CPU_THRESHOLD_PROD || '30' }}
-      scale_up_memory_threshold: ${{ vars.SCALE_UP_MEMORY_THRESHOLD_PROD || '65' }}
-      scale_down_memory_threshold: ${{ vars.SCALE_DOWN_MEMORY_THRESHOLD_PROD || '25' }}
+      max_concurrency: ${{ vars.MAX_CONCURRENCY_PROD || '100' }}
       # Domain & DNS Configuration (required for public mode)
       domain_name: ${{ vars.DOMAIN_NAME_PROD || 'roboledger.ai' }}
       domain_name_root: ${{ vars.DOMAIN_NAME_ROOT || 'roboledger.ai' }}
