--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -120,19 +120,13 @@ jobs:
       # Container & Application Configuration
       ecr_repository: ${{ vars.ECR_REPOSITORY || 'roboledger-app' }}
       ecr_image_tag: staging
-      # ECS & Compute Configuration
-      cpu: ${{ vars.CPU_STAGING || '256' }}
-      memory: ${{ vars.MEMORY_STAGING || '512' }}
-      fargate_weight: ${{ vars.FARGATE_WEIGHT_STAGING || '20' }}
-      fargate_spot_weight: ${{ vars.FARGATE_SPOT_WEIGHT_STAGING || '80' }}
-      fargate_base: ${{ vars.FARGATE_BASE_STAGING || '0' }}
+      # App Runner Compute Configuration
+      cpu: ${{ vars.CPU_STAGING || '0.25 vCPU' }}
+      memory: ${{ vars.MEMORY_STAGING || '0.5 GB' }}
       # Auto-scaling Configuration
       capacity_min: ${{ vars.CAPACITY_MIN_STAGING || '1' }}
       capacity_max: ${{ vars.CAPACITY_MAX_STAGING || '2' }}
-      scale_up_cpu_threshold: ${{ vars.SCALE_UP_CPU_THRESHOLD_STAGING || '60' }}
-      scale_down_cpu_threshold: ${{ vars.SCALE_DOWN_CPU_THRESHOLD_STAGING || '40' }}
-      scale_up_memory_threshold: ${{ vars.SCALE_UP_MEMORY_THRESHOLD_STAGING || '60' }}
-      scale_down_memory_threshold: ${{ vars.SCALE_DOWN_MEMORY_THRESHOLD_STAGING || '30' }}
+      max_concurrency: ${{ vars.MAX_CONCURRENCY_STAGING || '100' }}
       # Domain & DNS Configuration (required for public mode)
       domain_name: ${{ vars.DOMAIN_NAME_STAGING || 'staging.roboledger.ai' }}
       domain_name_root: ${{ vars.DOMAIN_NAME_ROOT || 'roboledger.ai' }}
